--- a/psychic/src/components/Header/Header.css
+++ b/psychic/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 header {
   /* background-image: url(/Gemini_Generated_Image_7wmhpq7wmhpq7wmh.jpg); */
   /*transition: background-color 2s ease;*/
@@ -31,16 +33,12 @@ h1 {
 
 .brand-picture {
   border-radius: 50%;
-  background-image: url(images/photo_2024-12-23_14-42-18.jpg);
+  background-image: url(../../assets/images/profile.jpg);
   margin-top: 13px;
   margin-left: 20px;
   margin-right: 20px;
   border-color: aqua;
-}
-
-.brand-pic {
-  margin: inherit;
-  border-radius: inherit;
+  width: 320px;
 }
 
 .Names-Co {
@@ -72,11 +70,13 @@ h1 {
 }
 
 .dropdown-content {
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   background-color: none;
+  color: whitesmoke;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
 a {
@@ -91,7 +91,8 @@ a {
 
 .show {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   animation: fadeIn 0.3s ease-in-out;
 }
 
