--- a/psychic/src/components/Header/Header.css
+++ b/psychic/src/components/Header/Header.css
@@ -1,102 +1,5 @@
 @import "tailwindcss";
 
-header {
-  /* background-image: url(/Gemini_Generated_Image_7wmhpq7wmhpq7wmh.jpg); */
-  /*transition: background-color 2s ease;*/
-  color: #f7f2f5;
-  font-size: large;
-  font-weight: bold;
-  margin: 20px 40px;
-  padding: 10px;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 25% 65% 10%;
-  box-shadow: 20 40px 0px rgba(10, 21, 103, 0.1);
-}
-
-header:hover, .dropdown-btn:hover {
-  /* background-color: rgba(255, 0, 0, 0); */
-  background-color: #111;
-  transition: background-color 0.3s ease;
-}
-
 h1 {
-  font-family: 'Lobster', cursive; /* Or another stylish font */
-  font-size: 3rem;
-  font-weight: bolder;
-  color: #E63946; /* Vibrant color */
-  text-shadow: 1px 1px 2px yellowgreen; /* Subtle shadow */
-  letter-spacing: 2px; 
-  margin-bottom: 10px;
-  text-align: center; 
-}
-
-.brand-picture {
-  border-radius: 50%;
-  background-image: url(../../assets/images/profile.jpg);
-  margin-top: 13px;
-  margin-left: 20px;
-  margin-right: 20px;
-  border-color: aqua;
-  width: 320px;
-}
-
-.Names-Co {
-  margin-right: 20px;
-  margin-left: 80px;
-  padding: 10px 5px;
-}
-
-.options {
-  place-self: center;
-  background: none;
-}
-
-.dropdown-btn {
-  background: none;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: rebeccapurple;
-  margin: 6px 0;
-  display: block;
-}
-
-.dropdown-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  background-color: none;
-  color: whitesmoke;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-a {
-  color: antiquewhite;
-  text-decoration: none;
-}
-
-.dropdown-btn:hover {
-  display: block;
-  background: none;
-}
-
-.show {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  font-family: 'Lobster', cursive;
 }
